syntax = "proto3";
package fusionchain.treasury;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "fusionchain/treasury/params.proto";
import "fusionchain/treasury/key.proto";
import "fusionchain/treasury/mpcsign.proto";
import "fusionchain/treasury/wallet.proto";

option go_package = "github.com/qredo/fusionchain/x/treasury/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/fusionchain/treasury/params";
  }

  // Queries a list of KeyRequests items.
  rpc KeyRequests(QueryKeyRequestsRequest) returns (QueryKeyRequestsResponse) {
    option (google.api.http).get = "/fusionchain/treasury/key_requests";
  }

  // Queries a single KeyRequest by its id.
  rpc KeyRequestById(QueryKeyRequestByIdRequest)
      returns (QueryKeyRequestByIdResponse) {
    option (google.api.http).get = "/fusionchain/treasury/key_request_by_id";
  }

  // Queries a list of Keys items.
  rpc Keys(QueryKeysRequest) returns (QueryKeysResponse) {
    option (google.api.http).get = "/fusionchain/treasury/keys";
  }

  // Queries a list of SignatureRequests items.
  rpc SignatureRequests(QuerySignatureRequestsRequest)
      returns (QuerySignatureRequestsResponse) {
    option (google.api.http).get =
        "/fusionchain/treasury/get_signature_requests";
  }

  // Queries a single SignatureRequest by its id.
  rpc SignatureRequestById(QuerySignatureRequestByIdRequest)
      returns (QuerySignatureRequestByIdResponse) {
    option (google.api.http).get =
        "/fusionchain/treasury/signature_request_by_id";
  }

  // Queries a list of SignTransactionRequests items.
  rpc SignTransactionRequests(QuerySignTransactionRequestsRequest)
      returns (QuerySignTransactionRequestsResponse) {
    option (google.api.http).get =
        "/fusionchain/treasury/sign_transaction_requests";
  }

  // Queries a list of SignTransactionRequestById items.
  rpc SignTransactionRequestById(QuerySignTransactionRequestByIdRequest)
      returns (QuerySignTransactionRequestByIdResponse) {
    option (google.api.http).get =
        "/fusionchain/treasury/sign_transaction_request_by_id";
  }

  // this line is used by scaffolder # 1
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryKeyRequestsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string keyring_addr = 2;
  KeyRequestStatus status = 3; // Optional
  string workspace_addr = 4;
}

message QueryKeyRequestsResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated KeyRequest key_requests = 2;
}

message QueryKeyRequestByIdRequest { uint64 id = 1; }

message QueryKeyRequestByIdResponse { KeyRequest key_request = 1; }

message QueryKeysRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string workspace_addr = 2; // Optional
  WalletType type = 3;       // Optional
}

message QueryKeysResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated KeyResponse keys = 2;
}

message KeyResponse {
  Key key = 1;
  repeated WalletKeyResponse wallets = 2;
}

message WalletKeyResponse {
  string address = 1;
  WalletType type = 2;
}

message QuerySignatureRequestsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string keyring_addr = 2;
  SignRequestStatus status = 3; // Optional
}

message QuerySignatureRequestsResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated SignRequest sign_requests = 2;
}

message QuerySignatureRequestByIdRequest { uint64 id = 1; }

message QuerySignatureRequestByIdResponse { SignRequest sign_request = 1; }

message QuerySignTransactionRequestsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  WalletType wallet_type = 2;
  uint64 key_id = 3;
  SignRequestStatus status = 4; // Optional
}

message SignTransactionRequestResponse {
  SignTransactionRequest sign_transaction_request = 1;
  SignRequest sign_request = 2;
}

message QuerySignTransactionRequestsResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated SignTransactionRequestResponse sign_transaction_requests = 2;
}

message QuerySignTransactionRequestByIdRequest { uint64 id = 1; }

message QuerySignTransactionRequestByIdResponse {
  SignTransactionRequest sign_transaction_request = 1;
}